# college-task-hub

./: .env  README.md  docker-compose.yml  locations.py  notifications.py  package-lock.json  pyproject.toml  ratings.py  tasks.py  users.py
Backend/: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  check_tables.py  pyproject.toml  requirements.txt  sql_app.db  sql_app.sqlite  test.db  test_users.db
Backend/src/: sql_app.db
Backend/src/app/: dependencies.py  logger.py  logging.py  logging_middleware.py  main.py
Backend/src/app/core/: auth.py  config.py  database.py  security.py
Backend/src/app/crud/: applications.py  locations.py  notifications.py  ratings.py  tasks.py  users.py
Backend/src/app/middleware/: logger.py  logging_middleware.py
Backend/src/app/models/: applications.py  locations.py  notifications.py  ratings.py  tasks.py  users.py
Backend/src/app/routers/: applications.py  locations.py  notifications.py  ratings.py  tasks.py  users.py
Backend/src/app/schema/: applications.py  locations.py  notifications.py  ratings.py  tasks.py  users.py
Backend/src/app/scripts/: fix_receiver_id_column.py
Backend/src/app/tests/: conftest.py
Backend/src/app/tests/auth/: test_auth.py
Backend/src/app/tests/crud/: test_location_crud.py  test_notification_crud.py  test_notifications_crud.py  test_ratings_crud.py  test_tasks_crud.py  test_users_crud.py
Backend/src/app/tests/routers/: test_locations.py  test_notifcations.py  test_notifications.py  test_ratings.py  test_tasks.py  test_users.py
app/: LICENSE.txt
app/src/app/: __init__.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: head.tsx  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/job-post/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/app/test/: page.tsx
frontend/src/components/: header.tsx
frontend/src/components/auth/: authDialog.tsx  protectedRoute.tsx  roleSelector.tsx  signInDialog.tsx  signInForm.tsx  signUpDialog.tsx  signUpForm.tsx
frontend/src/components/ui/: dialog.tsx  (+2 more)
frontend/src/types/: locations.tsx  task.tsx  users.tsx
src/app/: __about__.py  main.py
(+48 files in other folders)
