[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Robert Rodarte", email = "robertrodarte02@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "bandit>=1.7.10",
    "bcrypt==3.2.2",
    "fastapi[all]>=0.115.11",
    "passlib[bcrypt]>=1.7.4",
    "pre-commit>=3.5.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.9.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.9",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]

[project.urls]
Documentation = "https://github.com/Robert Rodarte/app#readme"
Issues = "https://github.com/Robert Rodarte/app/issues"
Source = "https://github.com/Robert Rodarte/app"

[tool.hatch.version]
path = "src/app/__about__.py"

[tool.hatch.envs.default]
# Default environment settings
python = "3.12"
installer = "uv"
path = ".venv"

[tool.hatch.envs.default.scripts]
# Default environment scripts for development and database operations
dev = "fastapi dev {args:src/app/main.py}"
tests = "pytest {args:src/app/tests}"

[tool.hatch.envs.types]
installer = "uv"
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/app tests}"

[tool.coverage.run]
source_pkgs = ["app", "tests"]
branch = true
parallel = true
omit = [
  "src/app/__about__.py",
]

[tool.coverage.paths]
app = ["src/app", "*/app/src/app"]
tests = ["tests", "*/app/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
